--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,11 @@
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path("cocktail_xoh0mq",
+      width: 400, height: 300, crop: :thumb, gravity: :face) %>');">
+  <div class="banner-content">
+    <h1>Cocktails</h1>
+        <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
+  </div>
+</div>
+
 <h1>Cocktails</h1>
 
 <div class="container">
@@ -15,10 +23,3 @@
       </ul>
 
     </div>
-
-  </div>
-  <div class="btn btn-primary col-xs-6 col-xs-offset-3">
-      <%= link_to "Add a cocktail", new_cocktail_path %>
-    </div>
-</div>
-</div>
