--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,6 @@
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
-  <%= f.button :submit %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.submit %>
 <% end %>
