--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @cocktail.name %></h1>
+<%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+
 <br>
 <% @doses.each do |dose| %>
   <p><%= dose.ingredient.name %>: <%= dose.description %> <%= link_to "delete", dose_path(dose), method: :delete %></p>
